--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-<h1><%= "#{@user.first_name @user.last_name}'s Profile" %></h1>
+<h1><%= "#{@user.first_name} #{@user.last_name}'s Profile" %></h1>
 <p>List of recent events...</p>
