--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -13,6 +13,12 @@
   <%= f.label :description %>
   <%= f.text_field :description %><br> 
 
+  <% @users.each do |user| %>
+    <%= check_box_tag 'user_ids[]', user.id %>
+    <%= label_tag(user.id, "#{user.full_name}") %><br>
+  <% end %>
+
+
   <%= f.submit %>
 
 <% end %>
