--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,3 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.activity-box {
+  border: 1px solid forestgreen;
+}
+
+.invite-details .btn-group {
+  display: inline-block;
+}
