--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,27 +1,31 @@
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited the user from being saved:</h2>
-    <ul>
-    <% @user.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %> 
 
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %><br> 
+<div>
+  <%= form_for @user, class: "form-horizontal" do |f| %>
+    <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited the user from being saved:</h2>
+      <ul>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+    <% end %> 
+    <legend>Sign Up</legend>
+    <div class="form-group">
+      <%= f.text_field :first_name, class: "form-control", placeholder: "First Name" %>
+    </div>
+    <div class="form-group">
+      <%= f.text_field :last_name, class: "form-control", placeholder: "Last Name" %>
+    </div>
+    <div class="form-group">
+      <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
+    </div>
+    <div class="form-group">
+      <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+    </div>
 
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %><br>
+    <%= f.submit class: "btn btn-primary" %>
 
-  <%= f.label :email %>
-  <%= f.email_field :email %><br>
-
-  <%= f.label :password %>
-  <%= f.password_field :password %><br>
-
-  <%= f.submit %>
-
-<% end %>
+  <% end %>
+</div>
