--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
   <body>
     <div id="header">
-      Social Notebook
+      <%= link_to 'Social Notebook', root_path %>
     </div>
 
     <div id="content" class="container">
@@ -35,7 +35,7 @@
       <%= yield %>
     </div>
    
-    <div class="footer">
+    <div id="footer">
       <p>Created by <a href="http://github.com/mwbennett">Mark Bennett</a>.</p>
     </div>
 
