--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Edit Profile</h1>
 
 <%= render 'shared/sidebar' %>
-<%= render 'shared/form' %>
+<div class="col-md-4 col-md-offset-1">
+  <%= render 'shared/form' %>
+</div>
 
 
