--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,4 +1,7 @@
-<h3>Add Activity</h3>
-
 <%= render 'shared/sidebar' %>
+
+<div class="col-md-8 col-md-offset-1">
+  <h1>Log an Activity</h1><br>
+</div>
+
 <%= render 'form' %>
