--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,8 @@
-<h3>Edit Event</h3>
-
 <%= render 'shared/sidebar' %>
+
+<div class="col-md-8 col-md-offset-1">
+  <h1>Edit Event</h1><br>
+</div>
+
 <%= render 'form' %>
 
