--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Edit Profile</h1>
-
 <%= render 'shared/sidebar' %>
+
+<div class="col-md-8 col-md-offset-1">
+  <h1>Edit Profile</h1><br>
+</div>
+
 <div class="col-md-4 col-md-offset-1">
   <%= render 'shared/form' %>
 </div>
