--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <%= render 'shared/sidebar' %>
-<div class="content-wrapper col-md-9 col-md-offset-1">
+<div class="content-wrapper col-md-8 col-md-offset-1">
   
   <div class='activity-box'>
     <h1>Activities</h1>
-    <button class="btn btn-sm btn-primary new-activity-event"><%= link_to 'New', new_activity_path %></button>
+    <button class="btn btn-sm btn-info new-activity-event"><%= link_to 'New', new_activity_path %></button>
     <% @activities.each do |a| %>
       <div class='activities-list'>
         <h3><%= a.description %></h3>
-        <p>
-          <%= a.created_at.strftime("%B %d, %Y")  %>
+        <p class="activity-event-date">
+          <%= distance_of_time_in_words(a.created_at, Time.now) %> ago
         </p>
         <p>
         <% if a.users.count > 1 %>
@@ -35,47 +35,48 @@
             </div> <!-- modal-content -->
           </div> <!-- modal-dialogue -->
         </div> <!-- modal fade -->
-        <%= button_to "Creat Event", activity_convert_path(a), method: :post, class: "btn btn-sm btn-default" %>
+        <%= button_to "Create Event", activity_convert_path(a.id), method: :post, class: "btn btn-sm btn-default create-event" %>
+        <hr>
       </div> <!-- activities-list -->
     <% end %>
   </div> <!-- activity-box -->
 
   <div class='event-box' style="display: none">
     <h1>Events</h1>
-    <div class='btn btn-sm btn-primary'><%= link_to 'New', new_event_path %></div>
+    <div class='btn btn-sm btn-info new-activity-event'><%= link_to 'New', new_event_path %></div>
     <div id='events-wrapper'>
       <% @events.each do |a| %>
-        <div class='event-box'>
-          <h3><%= a.description %></h3>
-          <p><%= a.date.strftime("%B %d, %Y") if a.date %></p>
-          <% if a.users.count > 1 %>
-            <a data-toggle="modal" data-target=<%= "##{a.id}" %>><%= "With #{a.users.count} people." %></a>
-          <% else %>
-            <a data-toggle="modal" data-target=<%= "##{a.id}" %>><%= "With #{a.users.count} person." %></a>
-          <% end %> 
-          </p>
-          <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id=<%= "#{a.id}" %>>
-            <div class="modal-dialog modal-sm">
+        <h3><%= a.description %></h3>
+        <p class="activity-event-date"><%= a.date.strftime("%B %d, %Y") if a.date %></p>
+        <% if a.users.count > 1 %>
+          <a data-toggle="modal" data-target=<%= "##{a.id}" %>><%= "With #{a.users.count} people." %></a>
+        <% else %>
+          <a data-toggle="modal" data-target=<%= "##{a.id}" %>><%= "With #{a.users.count} person." %></a>
+        <% end %> 
+        </p>
+        <%= button_to "Edit Event", edit_event_path(a), class: "btn btn-sm btn-default" %>
+        <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id=<%= "#{a.id}" %>>
+          <div class="modal-dialog modal-sm">
+            
+            <div class="modal-content">
               
-              <div class="modal-content">
-                
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                  <div class="modal-title" id="myModalLabel"><h4><%= a.description %></h4><h5 class="text-info">Who's invited?</h5></div>
-                </div> <!-- modal header -->
-                <div class="modal-body">
-                  <h6><%= @current_user.full_name %> (You)</h6>
-                  <% a.users.each do |user| %>
-                    <h6 class='attendee-list'><%= user.full_name %><h6>
-                  <% end %>
-                </div> <!-- modal-body  -->
-              </div> <!-- modal-content -->
-            </div> <!-- modal-dialogue -->
-          </div> <!-- modal fade -->
-        </div>  
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <div class="modal-title" id="myModalLabel"><h4><%= a.description %></h4><h5 class="text-info">Who's invited?</h5></div>
+              </div> <!-- modal header -->
+              <div class="modal-body">
+                <h6><%= @current_user.full_name %> (You)</h6>
+                <% a.users.each do |user| %>
+                  <h6 class='attendee-list'><%= user.full_name %><h6>
+                <% end %>
+              </div> <!-- modal-body  -->
+            </div> <!-- modal-content -->
+          </div> <!-- modal-dialogue -->
+        </div> <!-- modal fade -->
+        <hr>
       <% end %>
-    </div>
-  </div>
+    </div> <!-- events-wrapper -->
+  </div> <!-- event-box -->
 
   <div class='invite-box' style="display: none">
     <h1>Invites</h1>
@@ -83,7 +84,7 @@
       <% @invites.each do |a| %>
         <div class='invite-details'>
           <h3><%= a.event.description %></h3>
-          <p><%= a.event.date.strftime("%B %d, %Y") if a.event.date %></p>
+          <p class="activity-event-date"><%= a.event.date.strftime("%B %d, %Y") if a.event.date %></p>
           <p>
           <% if a.status == true %>
             <%= "Accepted" %>
@@ -97,6 +98,7 @@
             <%= button_to "Decline", invite_decline_path(a), method: :post, class: 'btn btn-sm btn-danger' %>
           </div>
         </div>  
+      <hr>
       <% end %>
     </div>
   </div>
