--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,41 +7,44 @@
   </head>
 
   <body>
-    <div id="wrap">  
-      <div id="header">
-        <%= link_to 'Social Notebook', root_path %>
-      </div>
-
-      <div id="content" class="container">
-        <div id="messages">  
-          <% if flash[:notice] %>
-            <div class="alert alert-success alert-dismissable">
-              <button type="button" class="close" data-dismiss="alert">
-                <span aria-hidden="true">&times;</span>
-                <span class="sr-only">Close</span>
-              </button>
-              <%= flash[:notice] %>
-          <% end %>
-          <% if flash[:alert] %>
-            </div>
-            <div class="alert alert-danger alert-dismissable">
-              <button type="button" class="close" data-dismiss="alert">
-                <span aria-hidden="true">&times;</span>
-                <span class="sr-only">Close</span>
-              </button>
-              <%= flash[:alert] if flash[:alert] %>
-            </div>
-          <% end %>
+    <div id="footer-wrapper">
+      
+      <div id="wrap">  
+        
+        <div id="header">
+          <%= link_to 'Social Notebook', root_path %>
         </div>
-        <%= yield %>
-      </div>
-    </div>
-    <div id="footer">
-      <div class="container">
+        <div id="body">
+          <div class="container">
+            <div id="messages">  
+              <% if flash[:notice] %>
+                <div class="alert alert-success alert-dismissable">
+                  <button type="button" class="close" data-dismiss="alert">
+                    <span aria-hidden="true">&times;</span>
+                    <span class="sr-only">Close</span>
+                  </button>
+                  <%= flash[:notice] %>
+              <% end %>
+              <% if flash[:alert] %>
+                </div>
+                <div class="alert alert-danger alert-dismissable">
+                  <button type="button" class="close" data-dismiss="alert">
+                    <span aria-hidden="true">&times;</span>
+                    <span class="sr-only">Close</span>
+                  </button>
+                  <%= flash[:alert] if flash[:alert] %>
+                </div>
+              <% end %>
+            </div> <!-- messages -->
+            <%= yield %>
+          </div> <!-- container -->
+        </div> <!-- body -->
+      </div> <!-- wrap -->
+
+      <div id="footer">
         <p>Created by <a href="http://github.com/mwbennett">Mark Bennett</a>.</p>
       </div>
-    </div>
 
-    </div> 
+    </div> <!-- container -->
   </body>
 </html>
