fixed event dates and updated footer styles and buttons in user#show

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -22,3 +22,12 @@ h1 {
 .new-activity-event a {
   color: white;
 }
+
+.btn-pair {
+  float: left;
+  margin-right: 3px;
+}
+
+.clear-float {
+  clear: both;
+}
