--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,8 @@
         </div> <!-- body -->
       </div> <!-- wrap -->
 
-      <div id="footer">
-        <p>Created by <a href="http://github.com/mwbennett">Mark Bennett</a>.</p>
+      <div class="navbar navbar-fixed-bottom">
+        <p><br>Created by <a href="http://github.com/mwbennett">Mark Bennett</a>.</p>
       </div>
 
     </div> <!-- container -->
