tweaks to views and copy

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,7 @@
-<h3>Create Event</h3>
-
 <%= render 'shared/sidebar' %>
+
+<div class="col-md-8 col-md-offset-1">
+  <h1>Create Event</h1><br>
+</div>
+
 <%= render 'form' %>
